# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: powershell.yml  super-linter.yml
hooks/: authenticode.py  check_authenticode_signature.py  check_authenticode_signatures.ps1  check_regex.sh  dotnet_format.py  dotnet_format_whitespace.py  util.py
testing/: util.py
testing/files/: .gitattributes  pwsh_signed.ps1
tests/: conftest.py  test_authenticode.py  test_check_authenticode_signature.py  test_util.py
